--- a/app/candidates/templates/candidates_index.html
+++ b/app/candidates/templates/candidates_index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<p>Кандидаты</p>
 {% for candidate in candidates %}
 	<p>{{ candidate.name }} {{ candidate.position }}</p>
 {% endfor %}
