--- a/app/candidates/templates/candidates_single.html
+++ b/app/candidates/templates/candidates_single.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<p>Карточка кандидата</p>
 <p>{{ candidate.name }} {{ candidate.position }}</p>
 </body>
 </html>
